Spacing fixed in Governance for wider screens

--- a/src/Pages/Governance/governance.module.scss
+++ b/src/Pages/Governance/governance.module.scss
@@ -58,6 +58,12 @@
       padding-top: 80px;
       margin-top: 20px;
     }
+
+    @media screen and (min-width: 1200px) {
+      padding-top: 80px;
+      margin-top: 100px;
+    }
+
     .plentyHeading {
       font-size: 24px;
       font-weight: 500;
